--- a/Cinema Functions/Cinema Functions TEST/Cinema Functions TEST.csproj
+++ b/Cinema Functions/Cinema Functions TEST/Cinema Functions TEST.csproj
@@ -10,7 +10,11 @@
   <ItemGroup>
     <PackageReference Include="nunit" Version="3.12.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.15.1" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.4.0"/>
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.4.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Cinema Functions\Cinema Functions.csproj" />
   </ItemGroup>
 
 </Project>
